--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,10 @@
     @apply bg-background text-foreground;
   }
 }
+
+button:hover {
+  cursor: pointer;
+}
+select:hover {
+  cursor: pointer;
+}
